swirly floats corrected with overflow hidden

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -39,6 +39,7 @@ nav > img {
 }
 
 nav, header {
+    margin: 0;
     background-color: var(--darkpurple);
 }
 
@@ -46,6 +47,7 @@ nav, header {
 header {
     color: var(--white);
     position: relative;
+    overflow: hidden;
 }
 header h1 {
     font-size: 80px;
@@ -79,6 +81,6 @@ header h1 {
 .float-right {
     position: absolute;
     width: 134px;
-    right: -40px;
     top: 35%;
+    right: -40px;
 }
